feat: complete Java and PostgreSQL breaking migration